--- a/src/style/libraryCourse.scss
+++ b/src/style/libraryCourse.scss
@@ -1,10 +1,10 @@
 .library-course {
   display: grid;
   grid-template-columns: repeat(auto-fit, 1fr);
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 50px, 1fr;
   background: cornflowerblue;
 
-  &__title-arrow {
+  &__title-check {
     grid-row: 1/2;
     display: flex;
   }
@@ -13,6 +13,9 @@
     grid-row: 1/2;
   }
 
+  &__action {
+    grid-row: 1/2;
+  }
   &__description {
     grid-row: 2/3;
   }
