line styles and arrow animations - something is wrong with arrow when clicked and add property ???

--- a/src/style/libraryCourse.scss
+++ b/src/style/libraryCourse.scss
@@ -45,6 +45,9 @@
 
   &__line {
     border-bottom: 1px solid #d1cbcb;
+    margin-top: 19px;
+    margin-bottom: 24px;
+    padding-top: 24px;
   }
 
   &__icon {
