--- a/src/style/arrow.scss
+++ b/src/style/arrow.scss
@@ -1,8 +1,15 @@
 .arrow {
-  border-left: 25px solid transparent;
-  border-right: 25px solid transparent;
-  border-bottom: 25px solid blue;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 8px solid $color-blue;
+  cursor: pointer;
 
   height: 0;
   width: 0;
+
+  transition: all 0.3s ease;
+}
+
+.arrow-closed {
+  transform: rotate(180deg);
 }
