--- a/src/style/schedule.scss
+++ b/src/style/schedule.scss
@@ -1,5 +1,12 @@
 .schedule {
+  grid-column: schedule-s/schedule-e;
+  grid-row: 1/-1;
+
   display: grid;
   grid-template-rows: 100px repeat(auto-fill, 75px) [progress-s] 76px [progress-e];
   grid-row-gap: 22px;
+
+  height: 100%;
+  position: relative;
+  width: 100%;
 }
