--- a/src/style/schedule.scss
+++ b/src/style/schedule.scss
@@ -5,8 +5,19 @@
   display: grid;
   grid-template-rows: 100px repeat(auto-fill, 75px) [progress-s] 76px [progress-e];
   grid-row-gap: 22px;
+  align-items: center;
+  justify-items: center;
 
   height: 100%;
   position: relative;
   width: 100%;
+
+  &__title {
+    border-left: 1px solid $color-subtle-gray;
+    padding-left: 30px;
+    color: white;
+    font-family: $font-alegreya;
+    font-size: 20px;
+    text-align: center;
+  }
 }
