--- a/src/style/schedule.scss
+++ b/src/style/schedule.scss
@@ -3,10 +3,11 @@
   grid-row: 1/-1;
 
   display: grid;
-  grid-template-rows: 100px repeat(auto-fill, 75px) [progress-s] 76px [progress-e];
+  grid-template-rows: 100px repeat(5, 80px) [progress-s] 76px [progress-e];
   grid-row-gap: 22px;
   align-items: center;
   justify-items: center;
+  align-content: center;
 
   height: 100%;
   position: relative;
